test/spec_vectors/simd_f64x2_arith/fail/module_16.wat
(module (func $f64x2.div-1st-arg-empty (result v128) (f64x2.div (v128.const f64x2 0 0))))